Fixed the Line spacing

--- a/client/src/scss/appearance/font.scss
+++ b/client/src/scss/appearance/font.scss
@@ -24,6 +24,19 @@ $font_size: 1.6rem;
 .paragraph_font {
   font-family: $paragraph_font;
   -webkit-text-stroke: 1px white;
+  font-size: 1.7rem;
+  line-height: 3.4rem;
+  li {
+    line-height: 2rem;
+  }
+  // ul ol {
+  //   li {
+  //     line-height: 2rem;
+  //   }
+  // }
+
+ 
+  
 }
 .heading_font {
   font-family: $heading_font;
